kubernetes/system/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.clem-ops.org
    secretName: clem-ops-org-tls
  rules:
  - host: argocd.clem-ops.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80 # Important : on pointe vers le port HTTPS du service
