kubernetes/system/policy-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
  annotations:
    argocd.argoproj.io/sync-wave: "5" 
spec:
  validationFailureAction: Audit
  rules:
  - name: check-memory-limits
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "?*"
